[gd_scene load_steps=22 format=3 uid="uid://bcw66tob22of1"]

[ext_resource type="Script" path="res://prefabs/characters/lizard/lizard.gd" id="1_i42rh"]
[ext_resource type="PackedScene" uid="uid://dd5fpvwuwrhgx" path="res://prefabs/components/Properties/OrientationHandler2DSimplified/OrientationHandler2DSimplified.tscn" id="2_2kjo4"]
[ext_resource type="Texture2D" uid="uid://3j11nmxco3g4" path="res://assets/aseprite/lizard.png" id="2_pw6jo"]
[ext_resource type="Script" path="res://prefabs/components/Properties/Stats/StatsComponent.gd" id="3_ysfwk"]
[ext_resource type="PackedScene" uid="uid://drjbn70yf418x" path="res://prefabs/components/Properties/DetectionRaycaster/DetectionRaycaster.tscn" id="4_lvdp3"]
[ext_resource type="Script" path="res://prefabs/characters/lizard/States/LizardIdle.gd" id="4_twjhp"]
[ext_resource type="Script" path="res://prefabs/characters/lizard/States/LizardAggro.gd" id="6_edfj2"]
[ext_resource type="Script" path="res://prefabs/characters/lizard/States/LizardIdleMovement.gd" id="6_miti0"]
[ext_resource type="Script" path="res://prefabs/characters/lizard/States/LizardChargeMovement.gd" id="6_qpu2t"]
[ext_resource type="PackedScene" uid="uid://cul8k4e4apnjx" path="res://prefabs/components/Properties/Velocity/VelocityComponent.tscn" id="6_xx5g6"]
[ext_resource type="Script" path="res://prefabs/characters/lizard/States/LizardChargeAttack.gd" id="7_f0vwd"]
[ext_resource type="Script" path="res://prefabs/characters/lizard/States/LizardSpitMovement.gd" id="7_plu44"]
[ext_resource type="Script" path="res://prefabs/components/state_machine/StateMachine.gd" id="8_uld4n"]
[ext_resource type="PackedScene" uid="uid://dfrwg73p8bx44" path="res://prefabs/components/Properties/Gravity/GravityComponent.tscn" id="8_x2nol"]
[ext_resource type="Script" path="res://prefabs/characters/lizard/States/LizardSpitAttack.gd" id="9_w2i3c"]
[ext_resource type="PackedScene" uid="uid://dvvomv6o68kt2" path="res://prefabs/components/Properties/Stats/StatsComponent.tscn" id="15_hn17x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ymlm4"]
atlas = ExtResource("2_pw6jo")
region = Rect2(0, 0, 48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g23f4"]
size = Vector2(47, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqmm3"]
size = Vector2(120, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwr0a"]
size = Vector2(300, 100)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4x1l4"]
height = 20.0

[node name="Lizard" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "orientation_handler", "detection_raycaster", "stats_component", "aggro_state_machine", "movement_attack_state_machine", "floor_detect_raycasts", "velocity_component", "navigation_agent") groups=["Enemy"]]
z_index = 10
texture_filter = 1
collision_layer = 8
collision_mask = 7
script = ExtResource("1_i42rh")
sprite = NodePath("Sprite2D")
orientation_handler = NodePath("OrientationHandler2DSimplified")
detection_raycaster = NodePath("DetectionRaycaster")
stats_component = NodePath("StatsComponent")
aggro_state_machine = NodePath("AggroStateMachine")
movement_attack_state_machine = NodePath("MovementAttackStateMachine")
floor_detect_raycasts = NodePath("Raycasts")
velocity_component = NodePath("VelocityComponent")
navigation_agent = NodePath("NavigationAgent2D")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true

[node name="OrientationHandler2DSimplified" parent="." node_paths=PackedStringArray("root") instance=ExtResource("2_2kjo4")]
root = NodePath("..")
nodes_to_flip = Array[NodePath]([NodePath("..")])

[node name="StatsComponent" parent="." instance=ExtResource("15_hn17x")]
script = ExtResource("3_ysfwk")

[node name="GravityComponent" parent="." node_paths=PackedStringArray("root") instance=ExtResource("8_x2nol")]
root = NodePath("..")

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("root", "stats_component") instance=ExtResource("6_xx5g6")]
root = NodePath("..")
stats_component = NodePath("../StatsComponent")

[node name="Raycasts" type="Node2D" parent="."]

[node name="FrontDown" type="RayCast2D" parent="Raycasts"]
position = Vector2(40, -20)
hit_from_inside = true

[node name="BackDown" type="RayCast2D" parent="Raycasts"]
position = Vector2(-40, -20)
hit_from_inside = true

[node name="Front" type="RayCast2D" parent="Raycasts"]
position = Vector2(0, 4)
target_position = Vector2(50, 0)

[node name="DetectionRaycaster" parent="." node_paths=PackedStringArray("detection_area") instance=ExtResource("4_lvdp3")]
detection_area = NodePath("../PlayerDetectionArea")
collision_layers = Array[int]([2, 1])

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
texture = SubResource("AtlasTexture_ymlm4")

[node name="LizardHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_g23f4")

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="BackView" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(-60, 4)
shape = SubResource("RectangleShape2D_mqmm3")

[node name="FrontView" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(150, 4)
shape = SubResource("RectangleShape2D_bwr0a")

[node name="ChargeAttackArea" type="Area2D" parent="."]

[node name="ChargeAttackShape" type="CollisionShape2D" parent="ChargeAttackArea"]
position = Vector2(20, 0)
shape = SubResource("CapsuleShape2D_4x1l4")

[node name="MovementAttackStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_uld4n")
initial_state = NodePath("LizardIdleMovement")

[node name="LizardIdleMovement" type="Node" parent="MovementAttackStateMachine" node_paths=PackedStringArray("root")]
script = ExtResource("6_miti0")
root = NodePath("../..")

[node name="LizardChargeMovement" type="Node" parent="MovementAttackStateMachine"]
script = ExtResource("6_qpu2t")

[node name="LizardChargeAttack" type="Node" parent="MovementAttackStateMachine"]
script = ExtResource("7_f0vwd")

[node name="LizardSpitMovement" type="Node" parent="MovementAttackStateMachine"]
script = ExtResource("7_plu44")

[node name="LizardSpitAttack" type="Node" parent="MovementAttackStateMachine"]
script = ExtResource("9_w2i3c")

[node name="AggroStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_uld4n")
initial_state = NodePath("LizardIdle")

[node name="LizardIdle" type="Node" parent="AggroStateMachine" node_paths=PackedStringArray("body")]
script = ExtResource("4_twjhp")
body = NodePath("../..")

[node name="LizardAggro" type="Node" parent="AggroStateMachine"]
script = ExtResource("6_edfj2")
